# generate-sn-stories

./: .gitignore  README.md  pyproject-old.toml  pyproject.toml
db/: chroma.sqlite3  latest_kickoff_task_outputs.db
memory/: chroma.sqlite3
src/generate_sn_stories/: app.py  crew.py  main.py
src/generate_sn_stories/config/: agents.yaml  tasks.yaml
src/generate_sn_stories/memory/: chroma.sqlite3
