[project]
name = "generate_sn_stories"
version = "0.1.0"
description = "Sistema para processar PDFs e associar a incidentes"
authors = [
    { name = "Igor", email = "igoralmeidatech@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.120.1,<1.0.0",
    "google-generativeai>=0.8.4",
]

[project.scripts]
generate_sn_stories = "generate_sn_stories.main:run"
run_crew = "generate_sn_stories.main:run"
train = "generate_sn_stories.main:train"
replay = "generate_sn_stories.main:replay"
test = "generate_sn_stories.main:test"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"
